Add swagger doc for admin endpoints
